--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.9",
+    "multer": "^1.4.3",
     "nodemailer": "^6.7.0",
     "nodemon": "^2.0.13",
     "swagger-ui-express": "^4.1.6",
