--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "nodejs",
+  "name": "fundoo-notes",
   "version": "1.0.0",
-  "description": "",
+  "description": "fundoo note application",
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "adithya s shenoy",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -21,9 +21,11 @@
     "mongoose": "^6.0.9",
     "multer": "^1.4.3",
     "nodemailer": "^6.7.0",
-    "nodemon": "^2.0.13",
-    "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15",
+    "swagger-ui-express": "^4.1.6"
   }
 }
