--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc mocha ./test --exit --inspect=0.0.0.0:9229"
   },
   "author": "adithya s shenoy",
   "license": "ISC",
@@ -25,7 +25,11 @@
     "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.1.3",
     "nodemon": "^2.0.15",
+    "nyc": "^15.1.0",
     "swagger-ui-express": "^4.1.6"
   }
 }
