--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.0.9",
     "multer": "^1.4.3",
     "nodemailer": "^6.7.0",
+    "swagger-ui-express": "^4.3.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
   },
@@ -29,7 +30,6 @@
     "chai-http": "^4.3.0",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.15",
-    "nyc": "^15.1.0",
-    "swagger-ui-express": "^4.1.6"
+    "nyc": "^15.1.0"
   }
 }
