--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.0.9",
     "multer": "^1.4.3",
     "nodemailer": "^6.7.0",
+    "swagger-ui-express": "^4.3.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
   },
