--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "fundoo note application",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "test": "nyc mocha ./test --exit --inspect=0.0.0.0:9229"
   },
   "author": "adithya s shenoy",
@@ -21,6 +21,7 @@
     "mongoose": "^6.0.9",
     "multer": "^1.4.3",
     "nodemailer": "^6.7.0",
+    "redis": "^4.0.1",
     "swagger-ui-express": "^4.3.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
