--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "fundoo note application",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "test": "nyc mocha ./test --exit --inspect=0.0.0.0:9229"
   },
   "author": "adithya s shenoy",
@@ -21,7 +21,6 @@
     "mongoose": "^6.0.9",
     "multer": "^1.4.3",
     "nodemailer": "^6.7.0",
-    "nodemon": "^2.0.15",
     "redis": "^4.0.1",
     "swagger-ui-express": "^4.3.0",
     "winston": "^3.3.3",
@@ -31,6 +30,7 @@
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "mocha": "^9.1.3",
+    "nodemon": "^2.0.15",
     "nyc": "^15.1.0"
   }
 }
